2005-02-06  Andrew Rice
	* many files
	 - added code for deck gun simulation and shooting

2005-01-30  Thorsten Jordan  <thorsten_jordan@gmx.de>, Andrew Rice
	* replaced direct SDL audio usage by SDL mixer usage
	 - now sound effects can be ogg files
	 - code much smaller and simpler
	 - will need libvorbis library
	* Andrew:
	 - fixes so that code compiles with macosx
	 - scope shows black when lowered
	* user defineable keys
	 - changeable in menu
	 - stored in config
	 - now keyboard language independent input
	* various small fixes all over the place

--- release 0.0.19

2004-12-07  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* everywhere LOTS OF THINGS
	 - mostly fixes, internal restructuring of display/interface code
	 - complete new system of handling input
	 - particle system, better graphics
	 - new model o class dd
	 - italian language
	 - new build system (SCONS)
	 - bugfixes in central classes
	 - new gui graphics
	 - and many more...

2004-07-18  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* quaternion.h
	  - fixed serious bug, new default c'tor
	    world is displayed correctly now
	    ships can accelerate again...
	* convoy
	  - heirs now from sea_object, not ship. seems reasonable
	* overall:
	  - removed silly reference counting, it works now like before, only
	    class game holds the sea_objects, all users ask is_defunct() and
	    zero their pointers if an object is defunct.

2004-07-15  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* Internal changes completed with some crude hacks to some point where the
	  game at least compiles and runs again.
	  Don't expect the game to work in any way, you can just look at the screens.
	  Of course this will change back to normal some day ;-)

2004-06-27  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* BIG internal transformation is going on.
	* airplane_interface and ship_interface disabled (not included anymore in the
	  game - they're rather useless)
	* next idea: Split ai class in heirs.